[tool.poetry]
name = "http_springer_books"
version = "0.1.0"
description = "Downloads ebooks from springer site based on links provided in an Excel file, wich was converted from a pdf file (using smallpdf site)."
authors = ["Leandro Gabriel <lassisg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8.0"
requests = "^2.23.0"
tabula-py = "^2.1.0"
pandas = "^1.0.3"
xlrd = "^1.2.0"
tqdm = "^4.45.0"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
